[tool.poetry]
name = "python-plisio"
version = "0.1.0"
description = "Python SDK for Plisio API."
authors = ["amiwrpremium <83715695+amiwrpremium@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "python_plisio"}]

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.31.0"
aiohttp = "^3.8.4"
pydantic = {extras = ["email"], version = "^1.10.8"}


[tool.poetry.group.dev.dependencies]
curlify = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
