[tool.poetry]
name = "python-plisio"
version = "2.0.1"
description = "Python SDK for Plisio API."
authors = ["amiwrpremium <amiwrpremium@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://amiwrpremium.github.io/python-plisio/"
repository = "https://github.com/amiwrpremium/python-plisio"
documentation = "https://python-plisio.readthedocs.io/en/latest/"
keywords = [
    "plisio",
    "api",
    "sdk",
    "python",
    "payments",
    "crypto",
    "gateway",
    "crypto payment",
    "bitcoin",
    "etherium",
    "blockchain",
    "tron",
    "BSC"
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
packages = [
    { include = "plisio", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.31.0"
aiohttp = "^3.8.4"
pydantic = { extras = ["email"], version = "^1.10.8" }

[tool.poetry.group.dev.dependencies]
curlify = "^2.2.1"
flake8 = "^6.0.0"
pylint = "^2.17.4"
mypy = "^1.3.0"
types-requests = "^2.31.0.0"
mkdocs-autorefs = "^0.4.1"
pydocstyle = "^6.3.0"
black = "^23.3.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.14"
mkdocstrings = "^0.21.2"
mkdocs-git-revision-date-localized-plugin = "^1.2.0"
mkdocs-git-committers-plugin-2 = "^1.1.2"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-section-index = "^0.3.5"
mkdocstrings-python = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.pydocstyle]
convention = "google"
add-ignore = "D212, D202, D200"

[tool.pylint]
disable = "too-few-public-methods, too-many-public-methods, logging-fstring-interpolation, line-too-long"